--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 h1 {
 
-    font-family: 'Abril Fatface', cursive;
+  font-family: 'Roboto Mono', monospace;
     text-align: center;
 
 }
@@ -30,4 +30,18 @@ div.container2 {
   background-size: cover;
 }
 
+.message {
+  height: 200px;
+  width: 80%;
+}
+.end {
+  text-align: center;
+}
+.welcome {
+  background-image: url("../images/backgrounds/h_img.jpg");
+  color: whitesmoke;
+}
+.welcome h6 {
+  text-align: center;
+  font-size: x-small;
 }
