--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,7 @@ text-align: center;
 }
 .container img {
     display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 10%;
   width: 50%;
 }
 h2 {
@@ -26,21 +25,30 @@ div.container2 {
   padding: 25px;
   background-repeat: no-repeat;
   background-size: cover;
+  margin: 10%;
 }
 
 .message {
-  height: 200px;
-  width: 80%;
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+ color:  #f8f8f8;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  
+  font-size: 16px;
+  resize: none;
 }
 .end {
   text-align: center;
 }
 .welcome {
   background-image: url("../images/backgrounds/h_img.jpg");
-  color: whitesmoke;
+  color: #f8f8f8;
   background-repeat: no-repeat;
   background-size: cover;
   margin: 10%;
+  
 }
 
 .welcome h6 {
@@ -79,7 +87,7 @@ div.container2 {
   background-image: url("../images/backgrounds/s_image.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  color: whitesmoke;
+  color: #f8f8f8;
   margin: 10%;
   padding: 5%;
 }
