--- a/css/styles.css
+++ b/css/styles.css
@@ -37,11 +37,8 @@ h2 {
 /* Gallery */
 
 .gallery {
-margin: 15%;  
-}
-
-.gallery .row img{
-  padding: 10px;
+  margin: 10px;
+  padding: 120px;
 }
 
 .message {
