--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,32 @@ h2 {
 }
 
 /* Gallery */
+#img1 {
+  position: relative;
+}
+#img1:hover{
+  opacity: 0.3;
+}
+#img1:hover .middle{
+  opacity: 1;
+}
+.middle {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 45%;
+  text-align: center;
+  transform: translate(-50%,-50%);
+  transition: .5s ease;
+}
+.text {
+  background-color: transparent;
+  color: black;
+  font-size: 30px;
+  padding: 4%;
+  border: 8px solid white;
+
+}
 
 .gallery {
   margin: 10px;
