add contact background

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,13 @@ h2 {
 /* Contact Us */
 
 .container2{
+  background-image: url("../images/backgrounds/c_image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #f8f8f8;
   margin: 10px;
+  padding: 70px;
+}
 }
 
 .container2 h2{
